test/fixtures/diagnostics/type-checker/negative/indexed-access-record-mismatch/input.tysh
namespace Samples.IndexedAccess

record Customer(Name: string, Age: int)

type CustomerName = Customer["Name"]

fun invalid(): CustomerName = 42

export fun leak(): CustomerName = "Ada"
